--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="container secundario"> 
-        <img clas="container__secundario__imagem" src="assets/pc.png" alt="Imagem de um monitor e um smartphone com o site da Alura aberto">
+        <img class="container__secundario__imagem" src="assets/pc.png" alt="Imagem de um monitor e um smartphone com o site da Alura aberto">
         <div class="container__div">
             <h2 class="container__secundario__descricao__subtitulo">Assista do seu jeito</h2>
             <p class="container__secundario__descricao__paragrafo">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
@@ -37,7 +37,7 @@
     <section class="container secundario">
         <img class="container__secundario__imagem" src="assets/Notebook.png" alt="Notebook com site da alura aberto em uma pagina de curso">
         <div class="container__div">
-            <h1 class="container__titulo">Baixe seus cursos</h1>
+            <h1 class="container__secundario__titulo">Baixe seus cursos</h1>
             <p class="container__secundario__descricao__paragrafo">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
     </section>
@@ -46,15 +46,15 @@
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>    
         <ul class="dispositivos__lista">
             <li>
-                <img src="assets/tv.png" alt="Ilustração de uma televisão em 2D">
+                <img class="dispositivos__lista__imagem" src="assets/tv.png" alt="Ilustração de uma televisão em 2D">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="assets/computador.png" alt="Ilustração de um computador em 2D">
+                <img class="dispositivos__lista__imagem" src="assets/computador.png" alt="Ilustração de um computador em 2D">
                 <h3 class="lista__item">Computadores</h3>
             </li>
             <li>
-                <img src="assets/celular.png" alt="Ilustração de uma televisão em 2D">
+                <img class="dispositivos__lista__imagem" src="assets/celular.png" alt="Ilustração de uma televisão em 2D">
                 <h3 class="lista__item">Celulares e Tablets</h3>
             </li>
         </ul>
