--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </section>
 
-    <section class="container secundario">
+    <section class="container secundario fix">
         <div class="container__div">
             <p class="container__secundario__descricao__paragrafo">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a class="container__botao secundario__botao" href="https://alura.com.br">Assine o Combo+</a>
